@@ -1,2 +1,8 @@
 [space-exploration]
 zonelist-renamed-zone=__1__[font=default-small]__2__[/font]
+
+[mod-setting-name]
+se-zone-can-be-given-description-like-module-city--uninstall=Uninstall
+
+[mod-setting-description]
+se-zone-can-be-given-description-like-module-city--uninstall=Reverts the surface names in alerts back to normal.
