@@ -1,0 +1,6 @@
+data:extend{{
+  type = "bool-setting",
+  name = "se-zone-can-be-given-description-like-module-city--uninstall",
+  setting_type = "runtime-global",
+  default_value = false,
+}}
